contracts/protocol/stellar/contracts/macro-integration-tests/tests/ui/lz_contract/fail/invalid_option.stderr
error: custom attribute panicked
 --> tests/ui/lz_contract/fail/invalid_option.rs:3:1
  |
3 | #[common_macros::lz_contract(unknown_option)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: failed to parse lz_contract config: expected one of `upgradeable`, `multisig`
